--- a/book-table.html
+++ b/book-table.html
@@ -33,7 +33,7 @@
 
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
-<title>IRIMAKI | Live sushi catering</title>
+<title>IRIMAKI | Sushi Catering</title>
 </head>
 <body>
 
@@ -100,7 +100,7 @@
 <a href="faq.html" class="nav-link">FAQ</a>
 </li>
 <li class="nav-item">
-<a href="book-table.html" class="nav-link active">Book Table</a>
+<a href="book-table.html" class="nav-link active">Reservation</a>
 </li>
 <li class="nav-item">
 <a href="coming-soon.html" class="nav-link">Coming Soon</a>
@@ -160,7 +160,7 @@
 +800-987-65-43
 </a>
 <a href="book-table.html" class="menu-btn book-table">
-Book Table
+Reservation
 <i class="flaticon-right-arrow-forward"></i>
 </a>
 </div>
@@ -175,7 +175,7 @@ Book Table
 <div class="page-title-area item-bg-4">
 <div class="container">
 <div class="page-title-content">
-<h2>Now Book Table</h2>
+<h2>Now Reservation</h2>
 <ul>
 <li>
 <a href="index.html">
@@ -183,7 +183,7 @@ Home
 <i class="fa fa-chevron-right"></i>
 </a>
 </li>
-<li>Book Table</li>
+<li>Reservation</li>
 </ul>
 </div>
 </div>
