--- a/default/index-2.html
+++ b/default/index-2.html
@@ -32,7 +32,7 @@
 
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
-<title>IRIMAKI | Live sushi catering</title>
+<title>IRIMAKI | Sushi Catering</title>
 </head>
 <body>
 
@@ -99,7 +99,7 @@
 <a href="faq.html" class="nav-link">FAQ</a>
 </li>
 <li class="nav-item">
-<a href="book-table.html" class="nav-link">Book Table</a>
+<a href="book-table.html" class="nav-link">Reservation</a>
 </li>
 <li class="nav-item">
 <a href="coming-soon.html" class="nav-link">Coming Soon</a>
@@ -266,7 +266,7 @@ Phone
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Quis.</p>
 <div class="banner-button">
 <a class="default-btn-two" href="book-table.html">
-Book Table
+Reservation
 <i class="flaticon-next"></i>
 </a>
 <div class="video-wrap">
@@ -295,7 +295,7 @@ Book Table
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Quis.</p>
 <div class="banner-button">
 <a class="default-btn-two" href="book-table.html">
-Book Table
+Reservation
 <i class="flaticon-next"></i>
 </a>
 <div class="video-wrap">
@@ -324,7 +324,7 @@ Book Table
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Quis.</p>
 <div class="banner-button">
 <a class="default-btn-two" href="book-table.html">
-Book Table
+Reservation
 <i class="flaticon-next"></i>
 </a>
 <div class="video-wrap">
