--- a/default/menu-standard.html
+++ b/default/menu-standard.html
@@ -33,7 +33,7 @@
 
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
-<title>IRIMAKI | Live sushi catering</title>
+<title>IRIMAKI | Sushi Catering</title>
 </head>
 <body>
 
@@ -157,7 +157,7 @@
 +800-987-65-43
 </a>
 <a href="book-table.html" class="menu-btn book-table">
-Book Table
+Reservation
 <i class="flaticon-right-arrow-forward"></i>
 </a>
 </div>
