--- a/about.html
+++ b/about.html
@@ -33,16 +33,11 @@
 
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
-<title>IRIMAKI | Live sushi catering</title>
+<title>IRIMAKI | Sushi Catering</title>
 </head>
 <body>
 
-<div class="preloader">
-<div class="spinner">
-<div class="double-bounce1"></div>
-<div class="double-bounce2"></div>
-</div>
-</div>
+
 
 
 <div class="IRIMAKI-nav">
@@ -62,105 +57,32 @@
 </a>
 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 <ul class="navbar-nav m-auto">
-<li class="nav-item">
-<a href="about.html#" class="nav-link dropdown-toggle">Home</a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="index.html" class="nav-link">Home One</a>
-</li>
-<li class="nav-item">
-<a href="index-2.html" class="nav-link">Home Two</a>
-</li>
-<li class="nav-item">
-<a href="index-3.html" class="nav-link">Home Three</a>
-</li>
-</ul>
-</li>
-<li class="nav-item">
-<a href="about.html#" class="nav-link dropdown-toggle">Menu</a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="menu-standard.html" class="nav-link">Menu Standard</a>
-</li>
-<li class="nav-item">
-<a href="menu-classic.html" class="nav-link">Menu Classic</a>
-</li>
-<li class="nav-item">
-<a href="menu-grid.html" class="nav-link">Menu Grid</a>
-</li>
-</ul>
-</li>
-<li class="nav-item">
-<a href="about.html#" class="nav-link dropdown-toggle active">Pages</a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="about.html" class="nav-link active">about</a>
-</li>
-<li class="nav-item">
-<a href="faq.html" class="nav-link">FAQ</a>
-</li>
-<li class="nav-item">
-<a href="book-table.html" class="nav-link">Book Table</a>
-</li>
-<li class="nav-item">
-<a href="coming-soon.html" class="nav-link">Coming Soon</a>
-</li>
-<li class="nav-item">
-<a href="404.html" class="nav-link">404 Error</a>
-</li>
-<li class="nav-item">
-<a href="log-in.html" class="nav-link">Log In</a>
-</li>
-<li class="nav-item">
-<a href="sign-up.html" class="nav-link">Sign Up</a>
-</li>
-</ul>
-</li>
-<li class="nav-item">
-<a href="about.html#" class="nav-link dropdown-toggle">Shop</a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="shop.html" class="nav-link">Shop</a>
-</li>
-<li class="nav-item">
-<a href="shop-details.html" class="nav-link">Shop Details</a>
-</li>
-<li class="nav-item">
-<a href="checkout.html" class="nav-link">Checkout</a>
-</li>
-<li class="nav-item">
-<a href="cart.html" class="nav-link">Cart</a>
-</li>
-</ul>
-</li>
-<li class="nav-item">
-<a href="about.html#" class="nav-link dropdown-toggle">Blog</a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="blog-grid.html" class="nav-link">Blog Grid</a>
-</li>
-<li class="nav-item">
-<a href="blog-right-sidebar.html" class="nav-link">Blog Right Sidebar</a>
-</li>
-<li class="nav-item">
-<a href="blog-details.html" class="nav-link">Blog Details</a>
-</li>
-</ul>
-</li>
-<li class="nav-item">
-<a href="contact.html" class="nav-link">Contact</a>
-</li>
+    <li class="nav-item">
+    <a href="#" class="nav-link">Home</a>
+    </li>
+    <li class="nav-item">
+    <a href="services.html" class="nav-link">Services</a>
+    </li>
+    <li class="nav-item">
+    <a href="about.html" class="nav-link active">about</a>
+    </li>
+    <li class="nav-item">
+    <a href="blog.html" class="nav-link">Blog</a>
+    </li>
+    <li class="nav-item">
+    <a href="contact.html" class="nav-link">Contact</a>
+    </li>
 </ul>
 <div class="others-option">
 <a href="cart.html" class="menu-btn cart-icon">
 <i class="flaticon-shopping-cart"></i>
 </a>
-<a href="tel:+800-987-65-43" class="menu-btn contact-number">
+<a href="tel:+01 (786) 672-3316" class="menu-btn contact-number">
 <i class="flaticon-phone-call"></i>
-+800-987-65-43
++01 (786) 672-3316
 </a>
 <a href="book-table.html" class="menu-btn book-table">
-Book Table
+Reservation
 <i class="flaticon-right-arrow-forward"></i>
 </a>
 </div>
@@ -398,8 +320,7 @@ Friday: <span>09:00 AM - 22:00 PM</span>
 <div class="col-lg-4 col-md-6">
 <div class="copy-right">
 <p>
-Copyright <i class="fa fa-copyright"></i>2021 IRIMAKI. Designed By
-<a href="https://envytheme.com/" target="_blank">EnvyTheme</a>
+Copyright <i class="fa fa-copyright"></i>2021 IRIMAKI. 
 </p>
 </div>
 </div>
