--- a/contact.html
+++ b/contact.html
@@ -33,16 +33,12 @@
 
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
-<title>IRIMAKI | Live sushi catering</title>
+<title>IRIMAKI | Sushi Catering</title>
+
 </head>
 <body>
 
-<div class="preloader">
-<div class="spinner">
-<div class="double-bounce1"></div>
-<div class="double-bounce2"></div>
-</div>
-</div>
+
 
 
 <div class="IRIMAKI-nav">
@@ -62,105 +58,32 @@
 </a>
 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 <ul class="navbar-nav m-auto">
-<li class="nav-item">
-<a href="contact.html#" class="nav-link dropdown-toggle">Home</a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="index.html" class="nav-link">Home One</a>
-</li>
-<li class="nav-item">
-<a href="index-2.html" class="nav-link">Home Two</a>
-</li>
-<li class="nav-item">
-<a href="index-3.html" class="nav-link">Home Three</a>
-</li>
-</ul>
-</li>
-<li class="nav-item">
-<a href="contact.html#" class="nav-link dropdown-toggle">Menu</a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="menu-standard.html" class="nav-link">Menu Standard</a>
-</li>
-<li class="nav-item">
-<a href="menu-classic.html" class="nav-link">Menu Classic</a>
-</li>
-<li class="nav-item">
-<a href="menu-grid.html" class="nav-link">Menu Grid</a>
-</li>
-</ul>
-</li>
-<li class="nav-item">
-<a href="contact.html#" class="nav-link dropdown-toggle">Pages</a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="about.html" class="nav-link active">about</a>
-</li>
-<li class="nav-item">
-<a href="faq.html" class="nav-link">FAQ</a>
-</li>
-<li class="nav-item">
-<a href="book-table.html" class="nav-link">Book Table</a>
-</li>
-<li class="nav-item">
-<a href="coming-soon.html" class="nav-link">Coming Soon</a>
-</li>
-<li class="nav-item">
-<a href="404.html" class="nav-link">404 Error</a>
-</li>
-<li class="nav-item">
-<a href="log-in.html" class="nav-link">Log In</a>
-</li>
-<li class="nav-item">
-<a href="sign-up.html" class="nav-link">Sign Up</a>
-</li>
-</ul>
-</li>
-<li class="nav-item">
-<a href="contact.html#" class="nav-link dropdown-toggle">Shop</a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="shop.html" class="nav-link">Shop</a>
-</li>
-<li class="nav-item">
-<a href="shop-details.html" class="nav-link">Shop Details</a>
-</li>
-<li class="nav-item">
-<a href="checkout.html" class="nav-link">Checkout</a>
-</li>
-<li class="nav-item">
-<a href="cart.html" class="nav-link">Cart</a>
-</li>
-</ul>
-</li>
-<li class="nav-item">
-<a href="contact.html#" class="nav-link dropdown-toggle">Blog</a>
-<ul class="dropdown-menu">
-<li class="nav-item">
-<a href="blog-grid.html" class="nav-link">Blog Grid</a>
-</li>
-<li class="nav-item">
-<a href="blog-right-sidebar.html" class="nav-link">Blog Right Sidebar</a>
-</li>
-<li class="nav-item">
-<a href="blog-details.html" class="nav-link">Blog Details</a>
-</li>
-</ul>
-</li>
-<li class="nav-item">
-<a href="contact.html" class="nav-link active">Contact</a>
-</li>
+    <li class="nav-item">
+    <a href="#" class="nav-link">Home</a>
+    </li>
+    <li class="nav-item">
+    <a href="services.html" class="nav-link">Services</a>
+    </li>
+    <li class="nav-item">
+    <a href="about.html" class="nav-link active">about</a>
+    </li>
+    <li class="nav-item">
+    <a href="blog.html" class="nav-link">Blog</a>
+    </li>
+    <li class="nav-item">
+    <a href="contact.html" class="nav-link">Contact</a>
+    </li>
 </ul>
 <div class="others-option">
-<a href="cart.html" class="menu-btn cart-icon">
+<!-- <a href="cart.html" class="menu-btn cart-icon">
 <i class="flaticon-shopping-cart"></i>
-</a>
-<a href="tel:+800-987-65-43" class="menu-btn contact-number">
+</a> -->
+<a href="tel:(786) 672-3316" class="menu-btn contact-number">
 <i class="flaticon-phone-call"></i>
-+800-987-65-43
+(786) 672-3316
 </a>
 <a href="book-table.html" class="menu-btn book-table">
-Book Table
+Reservation
 <i class="flaticon-right-arrow-forward"></i>
 </a>
 </div>
@@ -251,23 +174,22 @@ Home
 <i class="fa fa-map-marker"></i>
 </div>
 <span>Address</span>
-44 Canal Center Plaza #200, Alexandria, VA 22314, USA
+Florida, USA
 </li>
 <li>
 <div class="icon">
 <i class="fa fa-envelope"></i>
 </div>
 <span>Email</span>
-<a href="contact.html#"><span class="__cf_email__" data-cfemail="741507151c1d341119151d185a171b19">[email&#160;protected]</span></a>
-<a href="contact.html#"><span class="__cf_email__" data-cfemail="3b5d5a437b5e565a525715585456">[email&#160;protected]</span></a>
+<a href="contact.html#"><span class="__cf_email__" data-cfemail="741507151c1d341119151d185a171b19">[contact@irimaki.com]</span></a>
+
 </li>
 <li>
 <div class="icon">
 <i class="fa fa-phone"></i>
 </div>
 <span>Phone</span>
-<a href="contact.html#">+44 587 154756</a>
-<a href="contact.html#">+55 5555 14574</a>
+<a href="contact.html#">+01 777777777</a>
 </li>
 </ul>
 </div>
@@ -336,12 +258,11 @@ Privacy Policy
 <div class="single-widget single-widget-2">
 <h3>ADDRESS</h3>
 <ul>
-<li class="address-s">
-44 Canal Center Plaza #200, <br> Alexandria, VA 22314, USA
+<li class="address-s">Florida, USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
-<li><a href="../../cdn-cgi/l/email-protection#d3b2a0b2bbba93b4beb2babffdb0bcbe">Email: <span class="__cf_email__" data-cfemail="b3d2c0d2dbdaf3d4ded2dadf9dd0dcde">[email&#160;protected]</span></a></li>
-<li><a href="../../cdn-cgi/l/email-protection#cea7a0a8a18eabb6afa3bea2abe0ada1a3">Email: <span class="__cf_email__" data-cfemail="452c2b232a05203d24283529206b262a28">[email&#160;protected]</span></a></li>
+<li><a href="../../cdn-cgi/l/email-protection#d3b2a0b2bbba93b4beb2babffdb0bcbe">Email: <span class="__cf_email__" data-cfemail="b3d2c0d2dbdaf3d4ded2dadf9dd0dcde">[contact@irimaki.com]</span></a></li>
+
 </ul>
 </div>
 </div>
@@ -407,8 +328,7 @@ Friday: <span>09:00 AM - 22:00 PM</span>
 <div class="col-lg-4 col-md-6">
 <div class="copy-right">
 <p>
-Copyright <i class="fa fa-copyright"></i>2021 IRIMAKI. Designed By
-<a href="https://envytheme.com/" target="_blank">EnvyTheme</a>
+Copyright <i class="fa fa-copyright"></i>2021 IRIMAKI.
 </p>
 </div>
 </div>
