--- a/default/faq.html
+++ b/default/faq.html
@@ -33,7 +33,7 @@
 
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
-<title>IRIMAKI | Live sushi catering</title>
+<title>IRIMAKI | Sushi Catering</title>
 </head>
 <body>
 
@@ -100,7 +100,7 @@
 <a href="faq.html" class="nav-link active">FAQ</a>
 </li>
 <li class="nav-item">
-<a href="book-table.html" class="nav-link">Book Table</a>
+<a href="book-table.html" class="nav-link">Reservation</a>
 </li>
 <li class="nav-item">
 <a href="coming-soon.html" class="nav-link">Coming Soon</a>
@@ -160,7 +160,7 @@
 +800-987-65-43
 </a>
 <a href="book-table.html" class="menu-btn book-table">
-Book Table
+Reservation
 <i class="flaticon-right-arrow-forward"></i>
 </a>
 </div>
