--- a/index-3.html
+++ b/index-3.html
@@ -33,7 +33,7 @@
 
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
-<title>IRIMAKI | Live sushi catering</title>
+<title>IRIMAKI | Sushi Catering</title>
 </head>
 <body>
 
@@ -100,7 +100,7 @@
 <a href="faq.html" class="nav-link">FAQ</a>
 </li>
 <li class="nav-item">
-<a href="book-table.html" class="nav-link">Book Table</a>
+<a href="book-table.html" class="nav-link">Reservation</a>
 </li>
 <li class="nav-item">
 <a href="coming-soon.html" class="nav-link">Coming Soon</a>
@@ -160,7 +160,7 @@
 +800-987-65-43
 </a>
 <a href="book-table.html" class="menu-btn book-table">
-Book Table
+Reservation
 <i class="flaticon-right-arrow-forward"></i>
 </a>
 </div>
@@ -185,7 +185,7 @@ Book Table
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Quis.</p>
 <div class="banner-button">
 <a class="default-btn" href="book-table.html">
-Book Table
+Reservation
 <i class="flaticon-right-arrow-forward"></i>
 </a>
 <div class="video-wrap">
