--- a/index.html
+++ b/index.html
@@ -1285,7 +1285,7 @@ About Us
 </a>
 </li>
 <li>
-<a href="blog-grid.html">
+<a href="#">
 <i class="flaticon-right-arrow-forward"></i>
 Blog Grid
 </a>
@@ -1380,8 +1380,7 @@ Friday: <span>09:00 AM - 22:00 PM</span>
 <div class="col-lg-4 col-md-6">
 <div class="copy-right">
 <p>
-Copyright <i class="fa fa-copyright"></i>2021 IRIMAKI. Designed By
-<a href="https://envytheme.com/" target="_blank">EnvyTheme</a>
+Copyright <i class="fa fa-copyright"></i>2021 IRIMAKI. 
 </p>
 </div>
 </div>
