--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
 <title>IRIMAKI | Sushi Catering</title>
+<meta name="description" content="Sushi Catering">
+<meta name="keywords" content="sushi, irimaki, catering in florida, cocina japonesa, gastronomia de altura, catering eventos">
+<meta name="author" content="IRIMAKI development Buckapi">
 </head>
 <body>
 
@@ -267,78 +270,161 @@ Book Table
 
 
 <section class="service-area-three ptb-100">
-<div class="container">
-<div class="row">
-<div class="col-lg-4 col-md-6">
-<div class="single-service ss-1">
-<div class="service-icon">
-<i class="flaticon-cloche"></i>
-</div>
-<h3>Best Food<span>Quality</span></h3>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et enim recusandae similique iste blanditiis ipsum est sit excepturi voluptatibus! Mollitia</p>
-</div>
-</div>
-<div class="col-lg-4 col-md-6 icon-color">
-<div class="single-service ss-2">
-<div class="service-icon">
-<i class="flaticon-atmospheric"></i>
-</div>
-<h3>Magical <span>Atmosphere</span></h3>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et enim recusandae similique iste blanditiis ipsum est sit excepturi voluptatibus! Mollitia</p>
-</div>
-</div>
-<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0 icon-color">
-<div class="single-service">
-<div class="service-icon">
-<i class="flaticon-money-bag"></i>
-</div>
-<h3>Low Costing <span>Food</span></h3>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et enim recusandae similique iste blanditiis ipsum est sit excepturi voluptatibus! Mollitia</p>
-</div>
-</div>
-</div>
-</div>
+    <div class="container">
+    <div class="row">
+    <div class="col-lg-6 col-md-6">
+    <div class="single-service ss-1">
+    <div class="service-icon">
+    <i class="flaticon-cloche"></i>
+    </div>
+    <h3>Servicios de <span>Catering</span></h3>
+    <p>congresos, convenciones, reuniones de trabajo, inauguraciones, comidas de empresa, proporcionamos todo lo necesario para sorprender a sus invitados, adaptando nuestros menús para cada ocasión según tus necesidades.</p>
+    </div>
+    </div>
+    <div class="col-lg-6 col-md-6 icon-color">
+    <div class="single-service ss-2">
+    <div class="service-icon">
+    <i class="flaticon-atmospheric"></i>
+    </div>
+    <h3>Servicios de  <span>Chef privado</span></h3>
+    <p>¿Necesitas un chef para tu evento privado? Estamos capacitados para cubrir todo tipo de necesidades y así crear una experiencia inolvidable!</p>
+    </div>
+    </div>
+    
+    </div>
+    </div>
 </section>
 
 
 <section class="our-histry-area pt-100">
-<div class="container">
-<div class="row align-items-center">
-<div class="col-lg-6">
-<div class="history-title">
-<h2>A History Has Written For IRIMAKI Explore <span>more Our Story</span></h2>
-<img src="assets/img/shape/1.png" alt="Shape">
-<p>En Irimaki hemos diseñado todo nosotros mismos y queremos que tu también puedas crear tu propio catering de sushi. Puedes elegir un producto elaborado in situ contando con el mejor chef privado en el evento o, si lo prefieres, podemos elaborar el sushi previamente en nuestro restaurante y entregarlo ya presentado donde y cuando quieras.</p>
-<p>La división de catering de sushi nace de forma natural ante la creciente demanda de nuestros clientes, que solicitan una ampliación de los servicios ofrecidos y depositan su confianza en nosotros para servir nuestro producto tanto a profesionales del catering, como a empresas que sirven comidas en sus lugares de trabajo.
+    <div class="container">
+    <div class="row align-items-center">
+    <div class="col-lg-6">
+    <div class="history-title">
+    <h2>Irimaki |Sushi catering,  <span>que Ofrecemos?</span></h2>
+    <img src="assets/img/shape/1.png" alt="Shape">
+    <p>En Irimaki hemos diseñado todo nosotros mismos y queremos que tu también puedas crear tu propio catering de sushi. Puedes elegir un producto elaborado in situ contando con el mejor chef privado en el evento o, si lo prefieres, podemos elaborar el sushi previamente en nuestro restaurante y entregarlo ya presentado donde y cuando quieras.</p>
+    <p>La división de catering de sushi nace de forma natural ante la creciente demanda de nuestros clientes, que solicitan una ampliación de los servicios ofrecidos y depositan su confianza en nosotros para servir nuestro producto tanto a profesionales del catering, como a empresas que sirven comidas en sus lugares de trabajo.</p>
+    <p>
+    Nuestra máxima es dar el mejor servicio, ofreciendo la mejor puesta en escena, asegurando la calidad de nuestros productos y adaptando nuestro servicio a cada cliente a fin de cubrir sus necesidades y peticiones particulares en cualquier evento o catering que quieran realizar.
+    Mándanos tu propuesta en el apartado de contacto y elaboraremos un presupuesto acorde a lo que necesites.
+    </p>
+    <a class="default-btn" href="contact.html">
+    Contactame
+    <i class="flaticon-right-arrow-forward"></i>
+    </a>
+    </div>
+    </div>
+    <div class="col-lg-6">
+    <div class="single-histry-one">
+    <img src="assets/img/home-one/store/1.jpg" alt="Store">
+    <div class="store-img-two">
+    <img src="assets/img/home-one/store/2.jpg" alt="Store">
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+</section>
 
-Nuestra máxima es dar el mejor servicio, ofreciendo la mejor puesta en escena, asegurando la calidad de nuestros productos y adaptando nuestro servicio a cada cliente a fin de cubrir sus necesidades y peticiones particulares en cualquier evento o catering que quieran realizar.
-Mándanos tu propuesta en el apartado de contacto y elaboraremos un presupuesto acorde a lo que necesites.
-</p>
-<a class="default-btn" href="index.html#">
-Contactame
-<i class="flaticon-right-arrow-forward"></i>
-</a>
+<section class="event-area pt-100">
+    <div class="container">
+    <div class="row align-items-center">
+    <div class="col-lg-6">
+    <div class="row">
+    <div class="col-lg-6 col-sm-6 col-md-6">
+    <div class="event-img-1">
+    <img src="assets/img/home-one/event/1.jpg" alt="Event">
+    </div>
+    </div>
+    <div class="col-lg-6 col-sm-6 col-md-6">
+    <div class="event-img-2">
+    <img src="assets/img/home-one/event/2.jpg" alt="Event">
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="col-lg-6">
+    <div class="event-title">
+    <h2>Nuestros <span>Servicios</span></h2>
+    <img src="assets/img/shape/1.png" alt="Shape">
+        <p>Creamos catering personalizados y fiestas privadas, puedes llamarnos por teléfono o solicitar información a través del formulario de contacto. <br>Ofrecemos tanto servicio de entrega de piezas de sushi a granel para profesionales del sector, como comidas diarias en oficinas, o barras de sushi a medida con servicio de show cooking tanto para particulares como para eventos privados.</p>
+    <a class="default-btn" href="index-3.html#">
+    Ver servicios
+    <i class="flaticon-right-arrow-forward"></i>
+    </a>
+    </div>
+    </div>
+    </div>
+    </div>
+</section>
+
+
+
+<section class="speacial-offers-area ptb-100-70">
+<div class="container">
+
+<div class="row" style="    margin-left: 8%;
+    margin-right: -8%;">
+<div class="col-lg-5 col-sm-6 col-md-6" >
+<div class="single-speacial-Offers">
+<div class="menu-img" style="text-align: center">
+<img src="assets/img/home-three/speacial-offers/1.jpg" alt="Offers">
+
+</div>
+<div class="item-text">
+<h3 align="center">
+Servicios de <span>Catering </span>
+</h3>
+
+    <p>Congresos, convenciones, reuniones de trabajo, inauguraciones, comidas de empresa, proporcionamos todo lo necesario para sorprender a sus invitados, adaptando nuestros menús para cada ocasión según tus necesidades. </p>
+</div>
+<div>
+    <h3 align="center">
+    <a class="default-btn" href="index-3.html#">
+    Más info
+    <i class="flaticon-right-arrow-forward"></i>
+    </a>
 </div>
 </div>
-<div class="col-lg-6">
-<div class="single-histry-one">
-<img src="assets/img/home-one/store/1.jpg" alt="Store">
-<div class="store-img-two">
-<img src="assets/img/home-one/store/2.jpg" alt="Store">
+</div>
+
+<div class="col-lg-5 col-sm-6 col-md-6" style="text-align: center">
+<div class="single-speacial-Offers">
+<div class="menu-img">
+<img src="assets/img/home-three/speacial-offers/2.jpg" alt="Offers">
+
+</div>
+<div class="item-text">
+<h3>
+Servicios de  <span>Chef privado</span>
+</h3>
+    <p>¿Necesitas un chef para tu evento privado? Estamos capacitados para cubrir todo tipo de necesidades y así crear una experiencia inolvidable! </p>
+</div>
+<div>
+    <h3>
+        
+    <a class="default-btn" href="index-3.html#">
+    Más info
+    <i class="flaticon-right-arrow-forward"></i>
+    </a>
+    </h3>
 </div>
 </div>
 </div>
+
 </div>
 </div>
 </section>
 
-<section class="suitable-menu">
+<!-- <section class="suitable-menu">
     <div class="container">
     <div class="menu-item-wrap">
     <div class="section-title">
-    <h2>Check Our <span>Suitable Menu</span></h2>
+    <h2>Nuestros <span>Servicios</span></h2>
     <img src="assets/img/shape/1.png" alt="Shape">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices.</p>
+    <p>Creamos catering personalizados y fiestas privadas, puedes llamarnos por teléfono o solicitar información a través del formulario de contacto. </p>
+    <p>Ofrecemos tanto servicio de entrega de piezas de sushi a granel para profesionales del sector, como comidas diarias en oficinas, o barras de sushi a medida con servicio de show cooking tanto para particulares como para eventos privados.</p>
     </div>
     <div class="menu-list-wrap owl-carousel owl-theme">
     <div class="single-menu-item">
@@ -494,9 +580,9 @@ Contactame
     </div>
     </div>
     </div>
-</section>
+</section> -->
 
-<section class="offer-area ptb-100">
+<!-- <section class="offer-area ptb-100">
     <div class="container">
     <div class="row align-items-center">
     <div class="col-lg-8">
@@ -518,9 +604,9 @@ Contactame
     </div>
     </div>
     </div>
-</section>
+</section> -->
 
-<section class="delicious-menus-area ptb-100">
+<!-- <section class="delicious-menus-area ptb-100">
     <div class="container">
     <div class="delicious-menu-wrap">
     <div class="section-title">
@@ -676,7 +762,7 @@ Contactame
     </div>
     </div>
     </div>
-</section>
+</section> -->
 
 
 <section class="faq-area ptb-100">
@@ -1281,25 +1367,26 @@ Home
 <li>
 <a href="about.html">
 <i class="flaticon-right-arrow-forward"></i>
-About Us
+Quienes somos?
 </a>
 </li>
-<li>
-<a href="#">
-<i class="flaticon-right-arrow-forward"></i>
-Blog Grid
-</a>
-</li>
+
 <li>
 <a href="contact.html">
 <i class="flaticon-right-arrow-forward"></i>
-Contact Us
+Contactanos
 </a>
 </li>
 <li>
 <a href="index.html#">
 <i class="flaticon-right-arrow-forward"></i>
-Privacy Policy
+Politicas de prvacidad
+</a>
+</li>
+<li>
+<a href="index.html#">
+<i class="flaticon-right-arrow-forward"></i>
+Términos y condiciones
 </a>
 </li>
 </ul>
