--- a/about.html
+++ b/about.html
@@ -33,60 +33,142 @@
 
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
-<title>IRIMAKI | Sushi Catering</title>
+<title>IRIMAKI | About me</title>
+<meta name="description" content="About me">
 </head>
 <body>
 
 
 
 
-<div class="IRIMAKI-nav">
-<div class="navbar-area fixed-top">
+<div class="asahi-nav">
+    <div class="navbar-area fixed-top">
 
-<div class="mobile-nav">
-<a href="index.html" class="logo">
-<img src="assets/img/IRIMAKI-logo.png" alt="IRIMAKI Logo">
-</a>
+    <div class="mobile-nav">
+    <a href="index.html" class="logo">
+    <img src="assets/img/IRIMAKI-logo.png" alt="IRIMAKI Logo">
+    </a>
+    </div>
+
+    <div class="main-nav asahi-nav-style-two asahi-nav-style-three">
+    <nav class="navbar navbar-expand-md navbar-light" style="background-color: beige;">
+    <div class="container">
+    <a class="navbar-brand" href="index.html">
+    <img src="assets/img/IRIMAKI-logo.png" alt="IRIMAKI Logo">
+    </a>
+    <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
+    <ul class="navbar-nav m-auto">
+        <li class="nav-item">
+        <a href="#" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+        <a href="services.html" class="nav-link">Services</a>
+        </li>
+        <li class="nav-item">
+        <a href="about.html" class="nav-link active">about</a>
+        </li>
+        <li class="nav-item">
+        <a href="blog.html" class="nav-link">Blog</a>
+        </li>
+        <li class="nav-item">
+        <a href="contact.html" class="nav-link">Contact</a>
+        </li>
+    </ul>
+    <div class="others-option">
+    <a href="tel:+800-987-65-43" class="menu-btn contact-number">
+    <i class="flaticon-phone-call"></i>
+    +800-987-65-43
+    </a>
+    <a href="index.html#" data-bs-toggle="modal" data-bs-target="#myModal2" class="menu-btn side-menu">
+    Menu
+    <i class="flaticon-menu"></i>
+    </a>
+    </div>
+    </div>
+    </div>
+    </nav>
+    </div>
+    </div>
 </div>
-
-<div class="main-nav">
-<nav class="navbar navbar-expand-md navbar-light">
-<div class="container">
-<a class="navbar-brand" href="index.html">
-<img src="assets/img/IRIMAKI-logo.png" alt="IRIMAKI Logo">
+<div class="sidebar-modal">
+<div class="modal right fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2">
+<div class="modal-dialog" role="document">
+<div class="modal-content">
+<div class="modal-header">
+<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+<span aria-hidden="true">
+<i class="fa fa-times"></i>
+</span>
+</button>
+<h2 class="modal-title" id="myModalLabel2">
+<a href="index.html">
+<img src="assets/img/asahi-logo.png" alt="Logo">
 </a>
-<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
-<ul class="navbar-nav m-auto">
-    <li class="nav-item">
-    <a href="#" class="nav-link">Home</a>
-    </li>
-    <li class="nav-item">
-    <a href="services.html" class="nav-link">Services</a>
-    </li>
-    <li class="nav-item">
-    <a href="about.html" class="nav-link active">about</a>
-    </li>
-    <li class="nav-item">
-    <a href="blog.html" class="nav-link">Blog</a>
-    </li>
-    <li class="nav-item">
-    <a href="contact.html" class="nav-link">Contact</a>
-    </li>
+</h2>
+</div>
+<div class="modal-body">
+<div class="sidebar-modal-widget">
+<h3 class="title">Additional Links</h3>
+<ul>
+<li>
+<a href="about.html">About me</a>
+</li>
+<li>
+<a href="services.html">Sign Up</a>
+</li>
+<li>
+<a href="faq.html">FAQ</a>
+</li>
+
 </ul>
-<div class="others-option">
-
-<a href="tel:+01 (786) 672-3316" class="menu-btn contact-number">
-<i class="flaticon-phone-call"></i>
-+01 (786) 672-3316
+</div>
+<div class="sidebar-modal-widget">
+<h3 class="title">Contact Info</h3>
+<ul class="contact-info">
+<li>
+<i class="fa fa-map-marker"></i>
+Address
+<span>Florida, USA</span>
+</li>
+<li>
+<i class="fa fa-phone"></i>
+Email
+<span><a href="../../cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="0d6a646c63624d6a606c6461236e6260">[email&#160;protected]</a></span>
+</li>
+<li>
+<i class="fa fa-envelope"></i>
+Phone
+<span>+25462755, 265497466</span>
+</li>
+</ul>
+</div>
+<div class="sidebar-modal-widget">
+<h3 class="title">Connect With Us</h3>
+<ul class="social-list">
+<li>
+<a href="index.html#">
+<i class="fa fa-facebook"></i>
 </a>
-<a href="book-table.html" class="menu-btn book-table">
-Reservation
-<i class="flaticon-right-arrow-forward"></i>
+</li>
+<li>
+<a href="index.html#">
+<i class="fa fa-twitter"></i>
 </a>
+</li>
+<li>
+<a href="index.html#">
+<i class="fa fa-instagram"></i>
+</a>
+</li>
+<li>
+<a href="index.html#">
+<i class="fa fa-linkedin"></i>
+</a>
+</li>
+</ul>
 </div>
 </div>
 </div>
-</nav>
 </div>
 </div>
 </div>
@@ -95,7 +177,7 @@ Reservation
 <div class="page-title-area item-bg-4">
 <div class="container">
 <div class="page-title-content">
-<h2>About</h2>
+<h2>About me</h2>
 <ul>
 <li>
 <a href="index.html">
@@ -103,7 +185,7 @@ Home
 <i class="fa fa-chevron-right"></i>
 </a>
 </li>
-<li>About</li>
+<li>About me</li>
 </ul>
 </div>
 </div>
@@ -115,10 +197,10 @@ Home
 <div class="row align-items-center">
 <div class="col-lg-6">
 <div class="history-title">
-<h2>A History Has Written For IRIMAKI Explore <span>more Our About</span></h2>
+<h2>chef serving <span>Irimaki.</span></h2>
 <img src="assets/img/shape/1.png" alt="Shape">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore sed do eiusmod tempor incididunt ut Quis labore et dolore magna aliqua.</p>
+<p>Tomas Iribarren, is one of the best private home chefs in Florida to offer sushi catering. He's been cooking since he was a child and can't remember life without it!</p>
+<p>Tomas is a chef who has been working for the last few years. He combined his passion with various training, which led him to start up his own business and dedicate himself fully in this pursuit.</p>
 </div>
 </div>
 <div class="col-lg-6">
@@ -150,10 +232,12 @@ Home
 </div>
 <div class="col-lg-6">
 <div class="event-title">
-<h2>A warm & Friendly Atmosphere With a <span>event a suppor</span></h2>
+<h2>Professional, expert and <span>committed chef.</span></h2>
 <img src="assets/img/shape/1.png" alt="Shape">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<p>He is a talented chef who cooks not just for himself, but also often finds time to cater events and work as a private chef.</p>
+<p>His knowledge ranges from the preparation of more traditional dishes, to avant-garde; this makes his cuisine very balanced. He is capable in making sure every dish he prepares for you will be an amalgamation off flavors and techniques (Sushi).</p>
+<p>His cuisine is the result of years and effort spent learning about food, cooking it for a variety of events with different needs but always keeping its true nature in mind.</p>
+<p>The evaluations of their services are excellent.</p>
 </div>
 </div>
 </div>
@@ -161,31 +245,7 @@ Home
 </section>
 
 
-<section class="our-histry-area our-histry-area-two about-style">
-<div class="container">
-<div class="row align-items-center">
-<div class="col-lg-6">
-<div class="history-title">
-<h2>A History Has Written For IRIMAKI Explore <span>more Our Story</span></h2>
-<img src="assets/img/shape/1.png" alt="Shape">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore sed do eiusmod tempor incididunt ut Quis labore et dolore magna aliqua.</p>
-</div>
-</div>
-<div class="col-lg-6">
-<div class="histry-img">
-<img src="assets/img/about/1.jpg" alt="Histry">
-</div>
-</div>
-</div>
-</div>
-<div class="shape shape-1">
-<img src="assets/img/shape/2.png" alt="Shape">
-</div>
-<div class="shape shape-2">
-<img src="assets/img/shape/3.png" alt="Shape">
-</div>
-</section>
+
 
 
 <footer class="footer-area ptb-100-70">
@@ -318,7 +378,7 @@ Friday: <span>09:00 AM - 22:00 PM</span>
 <div class="col-lg-4 col-md-6">
 <div class="copy-right">
 <p>
-Copyright <i class="fa fa-copyright"></i>2021 IRIMAKI. 
+Copyright <i class="fa fa-copyright"></i>2021 asahi. 
 </p>
 </div>
 </div>
