--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
-<title>IRIMAKI | Sushi Catering</title>
+<title>Irimaki | Contact</title>
 
 </head>
 <body>
@@ -41,7 +41,7 @@
 
 
 
-<div class="IRIMAKI-nav">
+<div class="asahi-nav">
 <div class="navbar-area fixed-top">
 
 <div class="mobile-nav">
@@ -51,7 +51,7 @@
 </div>
 
 <div class="main-nav">
-<nav class="navbar navbar-expand-md navbar-light">
+<nav class="navbar navbar-expand-md navbar-light" style="background-color: beige;">
 <div class="container">
 <a class="navbar-brand" href="index.html">
 <img src="assets/img/IRIMAKI-logo.png" alt="IRIMAKI Logo">
@@ -80,7 +80,7 @@
 <i class="flaticon-phone-call"></i>
 (786) 672-3316
 </a>
-<a href="book-table.html" class="menu-btn book-table">
+<a href="#" class="menu-btn book-table">
 Reservation
 <i class="flaticon-right-arrow-forward"></i>
 </a>
@@ -179,7 +179,7 @@ Florida, USA
 <i class="fa fa-envelope"></i>
 </div>
 <span>Email</span>
-<a href="contact.html#"><span class="__cf_email__" data-cfemail="741507151c1d341119151d185a171b19">[contact@irimaki.com]</span></a>
+<a href="contact.html#"><span class="__cf_email__" data-cfemail="741507151c1d341119151d185a171b19">[contact@asahi.com]</span></a>
 
 </li>
 <li>
@@ -203,7 +203,7 @@ Florida, USA
 <div class="col-lg-3 col-sm-6">
 <div class="single-widget">
 <a href="contact.html#">
-<img src="assets/img/IRIMAKI-footer-logo.png" alt="Footer Logo">
+<img src="assets/img/asahi-footer-logo.png" alt="Footer Logo">
 </a>
 <p>Sign up to our newsletter to get the latest food item news.</p>
 <form class="subscribe newsletter-form" data-toggle="validator">
@@ -259,7 +259,7 @@ Privacy Policy
 <li class="address-s">Florida, USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
-<li><a href="../../cdn-cgi/l/email-protection#d3b2a0b2bbba93b4beb2babffdb0bcbe">Email: <span class="__cf_email__" data-cfemail="b3d2c0d2dbdaf3d4ded2dadf9dd0dcde">[contact@irimaki.com]</span></a></li>
+<li><a href="../../cdn-cgi/l/email-protection#d3b2a0b2bbba93b4beb2babffdb0bcbe">Email: <span class="__cf_email__" data-cfemail="b3d2c0d2dbdaf3d4ded2dadf9dd0dcde">[contact@asahi.com]</span></a></li>
 
 </ul>
 </div>
@@ -326,7 +326,7 @@ Friday: <span>09:00 AM - 22:00 PM</span>
 <div class="col-lg-4 col-md-6">
 <div class="copy-right">
 <p>
-Copyright <i class="fa fa-copyright"></i>2021 IRIMAKI.
+Copyright <i class="fa fa-copyright"></i>2021 asahi.
 </p>
 </div>
 </div>
