--- a/menu-standard.html
+++ b/menu-standard.html
@@ -33,7 +33,7 @@
 
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
-<title>IRIMAKI | Sushi Catering</title>
+<title>Asahi - Food & Restaurant HTML Template</title>
 </head>
 <body>
 
@@ -45,12 +45,12 @@
 </div>
 
 
-<div class="IRIMAKI-nav">
+<div class="asahi-nav">
 <div class="navbar-area fixed-top">
 
 <div class="mobile-nav">
 <a href="index.html" class="logo">
-<img src="assets/img/IRIMAKI-logo.png" alt="IRIMAKI Logo">
+<img src="assets/img/asahi-logo.png" alt="Asahi Logo">
 </a>
 </div>
 
@@ -58,7 +58,7 @@
 <nav class="navbar navbar-expand-md navbar-light">
 <div class="container">
 <a class="navbar-brand" href="index.html">
-<img src="assets/img/IRIMAKI-logo.png" alt="IRIMAKI Logo">
+<img src="assets/img/asahi-logo.png" alt="Asahi Logo">
 </a>
 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 <ul class="navbar-nav m-auto">
@@ -80,7 +80,7 @@
 <a href="menu-standard.html#" class="nav-link dropdown-toggle active">Menu</a>
 <ul class="dropdown-menu">
 <li class="nav-item">
-<a href="https://templates.envytheme.com/IRIMAKI/default/menu-Standard.html" class="nav-link active">Menu Standard</a>
+<a href="https://templates.envytheme.com/asahi/default/menu-Standard.html" class="nav-link active">Menu Standard</a>
 </li>
 <li class="nav-item">
 <a href="menu-classic.html" class="nav-link">Menu Classic</a>
@@ -157,7 +157,7 @@
 +800-987-65-43
 </a>
 <a href="book-table.html" class="menu-btn book-table">
-Reservation
+Book Table
 <i class="flaticon-right-arrow-forward"></i>
 </a>
 </div>
@@ -595,7 +595,7 @@ See full menu
 <div class="col-lg-3 col-sm-6">
 <div class="single-widget">
 <a href="menu-standard.html#">
-<img src="assets/img/IRIMAKI-footer-logo.png" alt="Footer Logo">
+<img src="assets/img/asahi-footer-logo.png" alt="Footer Logo">
 </a>
 <p>Sign up to our newsletter to get latest food item news.</p>
 <form class="subscribe">
@@ -611,7 +611,7 @@ See full menu
 <h3>USEFUL LINKS</h3>
 <ul class="footer-menu">
 <li>
- <a href="https://templates.envytheme.com/IRIMAKI/default/hone-one.html">
+ <a href="https://templates.envytheme.com/asahi/default/hone-one.html">
 <i class="flaticon-right-arrow-forward"></i>
 Home
 </a>
@@ -699,7 +699,7 @@ Privacy Policy
 <div class="col-lg-4 col-md-6">
 <div class="copy-right">
 <p>
-Copyright <i class="fa fa-copyright"></i>2021 IRIMAKI. Designed By
+Copyright <i class="fa fa-copyright"></i>2021 Asahi. Designed By
 <a href="https://envytheme.com/" target="_blank">EnvyTheme</a>
 </p>
 </div>
