--- a/book-table.html
+++ b/book-table.html
@@ -33,7 +33,7 @@
 
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
-<title>IRIMAKI | Sushi Catering</title>
+<title>Asahi - Food & Restaurant HTML Template</title>
 </head>
 <body>
 
@@ -45,12 +45,12 @@
 </div>
 
 
-<div class="IRIMAKI-nav">
+<div class="asahi-nav">
 <div class="navbar-area fixed-top">
 
 <div class="mobile-nav">
 <a href="index.html" class="logo">
-<img src="assets/img/IRIMAKI-logo.png" alt="IRIMAKI Logo">
+<img src="assets/img/asahi-logo.png" alt="Asahi Logo">
 </a>
 </div>
 
@@ -58,7 +58,7 @@
 <nav class="navbar navbar-expand-md navbar-light">
 <div class="container">
 <a class="navbar-brand" href="index.html">
-<img src="assets/img/IRIMAKI-logo.png" alt="IRIMAKI Logo">
+<img src="assets/img/asahi-logo.png" alt="Asahi Logo">
 </a>
 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 <ul class="navbar-nav m-auto">
@@ -100,7 +100,7 @@
 <a href="faq.html" class="nav-link">FAQ</a>
 </li>
 <li class="nav-item">
-<a href="book-table.html" class="nav-link active">Reservation</a>
+<a href="book-table.html" class="nav-link active">Book Table</a>
 </li>
 <li class="nav-item">
 <a href="coming-soon.html" class="nav-link">Coming Soon</a>
@@ -160,7 +160,7 @@
 +800-987-65-43
 </a>
 <a href="book-table.html" class="menu-btn book-table">
-Reservation
+Book Table
 <i class="flaticon-right-arrow-forward"></i>
 </a>
 </div>
@@ -175,7 +175,7 @@ Reservation
 <div class="page-title-area item-bg-4">
 <div class="container">
 <div class="page-title-content">
-<h2>Now Reservation</h2>
+<h2>Now Book Table</h2>
 <ul>
 <li>
 <a href="index.html">
@@ -183,7 +183,7 @@ Home
 <i class="fa fa-chevron-right"></i>
 </a>
 </li>
-<li>Reservation</li>
+<li>Book Table</li>
 </ul>
 </div>
 </div>
@@ -290,7 +290,7 @@ FIND A TABLE
 <div class="col-lg-3 col-sm-6">
 <div class="single-widget">
 <a href="book-table.html#">
-<img src="assets/img/IRIMAKI-footer-logo.png" alt="Footer Logo">
+<img src="assets/img/asahi-footer-logo.png" alt="Footer Logo">
 </a>
 <p>Sign up to our newsletter to get the latest food item news.</p>
 <form class="subscribe newsletter-form" data-toggle="validator">
@@ -414,7 +414,7 @@ Friday: <span>09:00 AM - 22:00 PM</span>
 <div class="col-lg-4 col-md-6">
 <div class="copy-right">
 <p>
-Copyright <i class="fa fa-copyright"></i>2021 IRIMAKI. Designed By
+Copyright <i class="fa fa-copyright"></i>2021 Asahi. Designed By
 <a href="https://envytheme.com/" target="_blank">EnvyTheme</a>
 </p>
 </div>
