--- a/index-3.html
+++ b/index-3.html
@@ -33,7 +33,7 @@
 
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
-<title>IRIMAKI | Sushi Catering</title>
+<title>Asahi - Food & Restaurant HTML Template</title>
 </head>
 <body>
 
@@ -45,12 +45,12 @@
 </div>
 
 
-<div class="IRIMAKI-nav">
+<div class="asahi-nav">
 <div class="navbar-area fixed-top">
 
 <div class="mobile-nav">
 <a href="index.html" class="logo">
-<img src="assets/img/IRIMAKI-logo.png" alt="IRIMAKI Logo">
+<img src="assets/img/asahi-logo.png" alt="Asahi Logo">
 </a>
 </div>
 
@@ -58,7 +58,7 @@
 <nav class="navbar navbar-expand-md navbar-light">
 <div class="container">
 <a class="navbar-brand" href="index.html">
-<img src="assets/img/IRIMAKI-logo.png" alt="IRIMAKI Logo">
+<img src="assets/img/asahi-logo.png" alt="Asahi Logo">
 </a>
 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 <ul class="navbar-nav m-auto">
@@ -100,7 +100,7 @@
 <a href="faq.html" class="nav-link">FAQ</a>
 </li>
 <li class="nav-item">
-<a href="book-table.html" class="nav-link">Reservation</a>
+<a href="book-table.html" class="nav-link">Book Table</a>
 </li>
 <li class="nav-item">
 <a href="coming-soon.html" class="nav-link">Coming Soon</a>
@@ -160,7 +160,7 @@
 +800-987-65-43
 </a>
 <a href="book-table.html" class="menu-btn book-table">
-Reservation
+Book Table
 <i class="flaticon-right-arrow-forward"></i>
 </a>
 </div>
@@ -180,17 +180,17 @@ Reservation
 <div class="row align-items-center">
 <div class="col-lg-6">
 <div class="banner-text">
-<span class="lg-text">Welcome to IRIMAKI</span>
+<span class="lg-text">Welcome to Asahi</span>
 <h1>Palatable Food For Territory Food Lover</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Quis.</p>
 <div class="banner-button">
 <a class="default-btn" href="book-table.html">
-Reservation
+Book Table
 <i class="flaticon-right-arrow-forward"></i>
 </a>
 <div class="video-wrap">
 <div class="video-btn-wrap">
-<a href="https://templates.envytheme.com/IRIMAKI/default/play-video" class="video-btn" data-ilb2-video='{"controls":"controls", "autoplay":false, "sources":[{"src":"assets/img/comeing-soon/video.mp4", "type":"video/mp4"}]}' data-imagelightbox="video">
+<a href="https://templates.envytheme.com/asahi/default/play-video" class="video-btn" data-ilb2-video='{"controls":"controls", "autoplay":false, "sources":[{"src":"assets/img/comeing-soon/video.mp4", "type":"video/mp4"}]}' data-imagelightbox="video">
 <i class="flaticon-play-button"></i>
 <div class="video-play">
 <p>Play Video Now</p>
@@ -324,7 +324,7 @@ FIND A TABLE
 <div class="row align-items-center">
 <div class="col-lg-6">
 <div class="history-title">
-<h2>A History Has Written For IRIMAKI Explore <span>more Our Story</span></h2>
+<h2>A History Has Written For Asahi Explore <span>more Our Story</span></h2>
 <img src="assets/img/shape/1.png" alt="Shape">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis consectetur adipiscing elit, sed do eiusmod.</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse. ipsum dolor sit amet, consectetur</p>
@@ -1087,7 +1087,7 @@ ORDER NOW
 </div>
 <div class="video-wrap">
 <div class="video-btn-wrap">
-<a href="https://templates.envytheme.com/IRIMAKI/default/play-video" class="video-btn" data-ilb2-video='{"controls":"controls", "autoplay":false, "sources":[{"src":"assets/img/comeing-soon/video.mp4", "type":"video/mp4"}]}' data-imagelightbox="video">
+<a href="https://templates.envytheme.com/asahi/default/play-video" class="video-btn" data-ilb2-video='{"controls":"controls", "autoplay":false, "sources":[{"src":"assets/img/comeing-soon/video.mp4", "type":"video/mp4"}]}' data-imagelightbox="video">
 <i class="flaticon-play-button"></i>
 </a>
 </div>
@@ -1160,7 +1160,7 @@ ORDER NOW
 <div class="col-lg-3 col-sm-6">
 <div class="single-widget">
 <a href="index-3.html#">
-<img src="assets/img/IRIMAKI-footer-logo.png" alt="Footer Logo">
+<img src="assets/img/asahi-footer-logo.png" alt="Footer Logo">
 </a>
 <p>Sign up to our newsletter to get the latest food item news.</p>
 <form class="subscribe newsletter-form" data-toggle="validator">
@@ -1284,7 +1284,7 @@ Friday: <span>09:00 AM - 22:00 PM</span>
 <div class="col-lg-4 col-md-6">
 <div class="copy-right">
 <p>
-Copyright <i class="fa fa-copyright"></i>2021 IRIMAKI. Designed By
+Copyright <i class="fa fa-copyright"></i>2021 Asahi. Designed By
 <a href="https://envytheme.com/" target="_blank">EnvyTheme</a>
 </p>
 </div>
