--- a/sign-up.html
+++ b/sign-up.html
@@ -33,20 +33,92 @@
 
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
-<title>IRIMAKI | Sushi Catering</title>
+<title>Asahi - Food & Restaurant HTML Template</title>
 </head>
 <body>
 
-
+<div class="preloader">
+<div class="spinner">
+<div class="double-bounce1"></div>
+<div class="double-bounce2"></div>
+</div>
+</div>
 
 
 <section class="sign-up-area">
 <div class="container-fluid">
 <div class="row">
-	<div class="col-lg-6 col-md-6 p-0">
-		<div class="sign-up-bg"></div>
-	</div>
-
+<div class="col-lg-6 col-md-6 p-0">
+<div class="sign-up-bg"></div>
+</div>
+<div class="col-lg-6 col-md-6 p-0">
+<div class="sign-up-form">
+<h3>Create your Account</h3>
+<form>
+<div class="row">
+<div class="col-lg-6 col-sm-6">
+<div class="form-group">
+<label>First Name</label>
+<input type="text" class="form-control" placeholder="First Name">
+</div>
+</div>
+<div class="col-lg-6 col-sm-6">
+<div class="form-group">
+<label>Last Name</label>
+<input type="text" class="form-control" placeholder="Last Name">
+</div>
+</div>
+<div class="col-lg-12">
+<div class="form-group">
+<label>Email</label>
+<input type="email" class="form-control" placeholder="Email Address">
+</div>
+</div>
+<div class="col-lg-12">
+<div class="form-group">
+<label>Password</label>
+<input type="password" class="form-control" placeholder="Password">
+</div>
+</div>
+<div class="col-md-6 offset-md-3">
+<button type="submit" class="btn default-btn">
+Sign Up
+</button>
+</div>
+<div class="col-lg-12">
+<p>
+Already a registered user?
+<a href="log-in.html">Login!</a>
+</p>
+</div>
+<div class="col-lg-12">
+<ul class="social-list">
+<li>
+<a href="sign-up.html#">
+<i class="fa fa-facebook"></i>
+</a>
+</li>
+<li>
+<a href="sign-up.html#">
+<i class="fa fa-twitter"></i>
+</a>
+</li>
+<li>
+<a href="sign-up.html#">
+<i class="fa fa-google-plus"></i>
+</a>
+</li>
+<li>
+<a href="sign-up.html#">
+<i class="fa fa-linkedin"></i>
+</a>
+</li>
+</ul>
+</div>
+</div>
+</form>
+</div>
+</div>
 </div>
 </div>
 </section>
