--- a/about.html
+++ b/about.html
@@ -59,10 +59,18 @@
     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
     <ul class="navbar-nav m-auto">
         <li class="nav-item">
-        <a href="#" class="nav-link">Home</a>
+        <a href="index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-        <a href="services.html" class="nav-link">Services</a>
+        <a href="services.html" class="nav-link dropdown-toggle">Services</a>
+        <ul class="dropdown-menu">
+        <li class="nav-item">
+        <a href="chef-private.html" class="nav-link">Chef private</a>
+        </li>
+        <li class="nav-item">
+        <a href="catering.html" class="nav-link">Sushi catering</a>
+        </li>
+        </ul>
         </li>
         <li class="nav-item">
         <a href="about.html" class="nav-link active">about</a>
@@ -102,7 +110,7 @@
 </button>
 <h2 class="modal-title" id="myModalLabel2">
 <a href="index.html">
-<img src="assets/img/asahi-logo.png" alt="Logo">
+<img src="assets/img/IRIMAKI-logo.png" alt="Logo">
 </a>
 </h2>
 </div>
@@ -114,11 +122,11 @@
 <a href="about.html">About me</a>
 </li>
 <li>
-<a href="services.html">Sign Up</a>
+<a href="services.html">Services</a>
 </li>
-<li>
+<!-- <li>
 <a href="faq.html">FAQ</a>
-</li>
+</li> -->
 
 </ul>
 </div>
@@ -308,7 +316,7 @@ Privacy Policy
 <h3>ADDRESS</h3>
 <ul>
 <li class="address-s">
-44 Canal Center Plaza #200, <br> Alexandria, VA 22314, USA
+Florida, <br> USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
 <li><a href="../../cdn-cgi/l/email-protection#93f2e0f2fbfad3f4fef2faffbdf0fcfe">Email: <span class="__cf_email__" data-cfemail="264755474e4f66414b474f4a0845494b">[email&#160;protected]</span></a></li>
