--- a/blog-details.html
+++ b/blog-details.html
@@ -544,7 +544,7 @@ Privacy Policy
 <h3>ADDRESS</h3>
 <ul>
 <li class="address-s">
-44 Canal Center Plaza #200, <br> Alexandria, VA 22314, USA
+Florida, <br> USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
 <li><a href="../../cdn-cgi/l/email-protection#ceafbdafa6a78ea9a3afa7a2e0ada1a3">Email: <span class="__cf_email__" data-cfemail="224351434a4b62454f434b4e0c414d4f">[email&#160;protected]</span></a></li>
