--- a/blog-right-sidebar.html
+++ b/blog-right-sidebar.html
@@ -519,7 +519,7 @@ Privacy Policy
 <h3>ADDRESS</h3>
 <ul>
 <li class="address-s">
-44 Canal Center Plaza #200, <br> Alexandria, VA 22314, USA
+Florida, <br> USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
 <li><a href="../../cdn-cgi/l/email-protection#86e7f5e7eeefc6e1ebe7efeaa8e5e9eb">Email: <span class="__cf_email__" data-cfemail="244557454c4d644349454d480a474b49">[email&#160;protected]</span></a></li>
