--- a/book-table.html
+++ b/book-table.html
@@ -344,7 +344,7 @@ Privacy Policy
 <h3>ADDRESS</h3>
 <ul>
 <li class="address-s">
-44 Canal Center Plaza #200, <br> Alexandria, VA 22314, USA
+Florida, <br> USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
 <li><a href="../../cdn-cgi/l/email-protection#fa9b899b9293ba9d979b9396d4999597">Email: <span class="__cf_email__" data-cfemail="84e5f7e5ecedc4e3e9e5ede8aae7ebe9">[email&#160;protected]</span></a></li>
