--- a/index-2.html
+++ b/index-2.html
@@ -1333,7 +1333,7 @@ Privacy Policy
 <h3>ADDRESS</h3>
 <ul>
 <li class="address-s">
-44 Canal Center Plaza #200, <br> Alexandria, VA 22314, USA
+Florida, <br> USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
 <li><a href="../../cdn-cgi/l/email-protection#f49587959c9db49399959d98da979b99">Email: <span class="__cf_email__" data-cfemail="5b3a283a33321b3c363a323775383436">[email&#160;protected]</span></a></li>
