--- a/menu-classic.html
+++ b/menu-classic.html
@@ -468,7 +468,7 @@ Privacy Policy
 <h3>ADDRESS</h3>
 <ul>
 <li class="address-s">
-44 Canal Center Plaza #200, <br> Alexandria, VA 22314, USA
+Florida, <br> USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
 <li><a href="../../cdn-cgi/l/email-protection#84e5f7e5ecedc4e3e9e5ede8aae7ebe9">Email: <span class="__cf_email__" data-cfemail="ccadbfada4a58caba1ada5a0e2afa3a1">[email&#160;protected]</span></a></li>
