--- a/menu-grid.html
+++ b/menu-grid.html
@@ -486,7 +486,7 @@ Privacy Policy
 <h3>ADDRESS</h3>
 <ul>
 <li class="address-s">
-44 Canal Center Plaza #200, <br> Alexandria, VA 22314, USA
+Florida, <br> USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
 <li><a href="../../cdn-cgi/l/email-protection#761705171e1f36111b171f1a5815191b">Email: <span class="__cf_email__" data-cfemail="09687a686160496e64686065276a6664">[email&#160;protected]</span></a></li>
