--- a/shop-details.html
+++ b/shop-details.html
@@ -634,7 +634,7 @@ Privacy Policy
 <h3>ADDRESS</h3>
 <ul>
 <li class="address-s">
-44 Canal Center Plaza #200, <br> Alexandria, VA 22314, USA
+Florida, <br> USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
 <li><a href="../../cdn-cgi/l/email-protection#5d3c2e3c35341d3a303c3431733e3230">Email: <span class="__cf_email__" data-cfemail="157466747d7c557278747c793b767a78">[email&#160;protected]</span></a></li>
