--- a/blog-grid.html
+++ b/blog-grid.html
@@ -411,7 +411,7 @@ Privacy Policy
 <h3>ADDRESS</h3>
 <ul>
 <li class="address-s">
-44 Canal Center Plaza #200, <br> Alexandria, VA 22314, USA
+Florida, <br> USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
 <li><a href="../../cdn-cgi/l/email-protection#076674666f6e47606a666e6b2964686a">Email: <span class="__cf_email__" data-cfemail="d9b8aab8b1b099beb4b8b0b5f7bab6b4">[email&#160;protected]</span></a></li>
