--- a/cart.html
+++ b/cart.html
@@ -427,7 +427,7 @@ Privacy Policy
 <h3>ADDRESS</h3>
 <ul>
 <li class="address-s">
-44 Canal Center Plaza #200, <br> Alexandria, VA 22314, USA
+Florida, <br> USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
 <li><a href="../../cdn-cgi/l/email-protection#9effedfff6f7def9f3fff7f2b0fdf1f3">Email: <span class="__cf_email__" data-cfemail="2f4e5c4e47466f48424e4643014c4042">[email&#160;protected]</span></a></li>
