--- a/checkout.html
+++ b/checkout.html
@@ -452,7 +452,7 @@ Privacy Policy
 <h3>ADDRESS</h3>
 <ul>
 <li class="address-s">
-44 Canal Center Plaza #200, <br> Alexandria, VA 22314, USA
+Florida, <br> USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
 <li><a href="../../cdn-cgi/l/email-protection#2c4d5f4d44456c4b414d4540024f4341">Email: <span class="__cf_email__" data-cfemail="c5a4b6a4adac85a2a8a4aca9eba6aaa8">[email&#160;protected]</span></a></li>
