--- a/contact.html
+++ b/contact.html
@@ -42,54 +42,61 @@
 
 
 <div class="asahi-nav">
-<div class="navbar-area fixed-top">
+    <div class="navbar-area fixed-top">
 
-<div class="mobile-nav">
-<a href="index.html" class="logo">
-<img src="assets/img/IRIMAKI-logo.png" alt="IRIMAKI Logo">
-</a>
-</div>
+    <div class="mobile-nav">
+    <a href="index.html" class="logo">
+    <img src="assets/img/IRIMAKI-logo.png" alt="IRIMAKI Logo">
+    </a>
+    </div>
 
-<div class="main-nav">
-<nav class="navbar navbar-expand-md navbar-light" style="background-color: beige;">
-<div class="container">
-<a class="navbar-brand" href="index.html">
-<img src="assets/img/IRIMAKI-logo.png" alt="IRIMAKI Logo">
-</a>
-<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
-<ul class="navbar-nav m-auto">
-    <li class="nav-item">
-    <a href="#" class="nav-link">Home</a>
-    </li>
-    <li class="nav-item">
-    <a href="services.html" class="nav-link">Services</a>
-    </li>
-    <li class="nav-item">
-    <a href="about.html" class="nav-link active">about</a>
-    </li>
-    <li class="nav-item">
-    <a href="blog.html" class="nav-link">Blog</a>
-    </li>
-    <li class="nav-item">
-    <a href="contact.html" class="nav-link">Contact</a>
-    </li>
-</ul>
-<div class="others-option">
-
-<a href="tel:(786) 672-3316" class="menu-btn contact-number">
-<i class="flaticon-phone-call"></i>
-(786) 672-3316
-</a>
-<a href="#" class="menu-btn book-table">
-Reservation
-<i class="flaticon-right-arrow-forward"></i>
-</a>
-</div>
-</div>
-</div>
-</nav>
-</div>
-</div>
+    <div class="main-nav asahi-nav-style-two asahi-nav-style-three">
+    <nav class="navbar navbar-expand-md navbar-light" style="background-color: beige;">
+    <div class="container">
+    <a class="navbar-brand" href="index.html">
+    <img src="assets/img/IRIMAKI-logo.png" alt="IRIMAKI Logo">
+    </a>
+    <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
+    <ul class="navbar-nav m-auto">
+        <li class="nav-item">
+        <a href="index.html" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+        <a href="services.html" class="nav-link dropdown-toggle">Services</a>
+        <ul class="dropdown-menu">
+        <li class="nav-item">
+        <a href="chef-private.html" class="nav-link">Chef private</a>
+        </li>
+        <li class="nav-item">
+        <a href="catering.html" class="nav-link">Sushi catering</a>
+        </li>
+        </ul>
+        </li>
+        <li class="nav-item">
+        <a href="about.html" class="nav-link active">about</a>
+        </li>
+        <li class="nav-item">
+        <a href="blog.html" class="nav-link">Blog</a>
+        </li>
+        <li class="nav-item">
+        <a href="contact.html" class="nav-link">Contact</a>
+        </li>
+    </ul>
+    <div class="others-option">
+    <a href="tel:+800-987-65-43" class="menu-btn contact-number">
+    <i class="flaticon-phone-call"></i>
+    +800-987-65-43
+    </a>
+    <a href="contact.html" data-bs-toggle="modal" data-bs-target="#myModal2" class="menu-btn side-menu">
+    Reservation
+    <i class="flaticon-menu"></i>
+    </a>
+    </div>
+    </div>
+    </div>
+    </nav>
+    </div>
+    </div>
 </div>
 
 
