--- a/faq.html
+++ b/faq.html
@@ -362,7 +362,7 @@ Privacy Policy
 <h3>ADDRESS</h3>
 <ul>
 <li class="address-s">
-44 Canal Center Plaza #200, <br> Alexandria, VA 22314, USA
+Florida, <br> USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
 <li><a href="../../cdn-cgi/l/email-protection#ed8c9e8c8584ad8a808c8481c38e8280">Email: <span class="__cf_email__" data-cfemail="325341535a5b72555f535b5e1c515d5f">[email&#160;protected]</span></a></li>
