--- a/index-3.html
+++ b/index-3.html
@@ -1214,7 +1214,7 @@ Privacy Policy
 <h3>ADDRESS</h3>
 <ul>
 <li class="address-s">
-44 Canal Center Plaza #200, <br> Alexandria, VA 22314, USA
+Florida, <br> USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
 <li><a href="../../cdn-cgi/l/email-protection#670614060f0e27000a060e0b4904080a">Email: <span class="__cf_email__" data-cfemail="d1b0a2b0b9b891b6bcb0b8bdffb2bebc">[email&#160;protected]</span></a></li>
