--- a/index1.html
+++ b/index1.html
@@ -1241,7 +1241,7 @@ Privacy Policy
 <h3>ADDRESS</h3>
 <ul>
 <li class="address-s">
-44 Canal Center Plaza #200, <br> Alexandria, VA 22314, USA
+Florida, <br> USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
 <li><a href="../../cdn-cgi/l/email-protection#aecfddcfc6c7eec9c3cfc7c280cdc1c3">Email: <span class="__cf_email__" data-cfemail="660715070e0f26010b070f0a4805090b">[email&#160;protected]</span></a></li>
