--- a/privacy.html
+++ b/privacy.html
@@ -33,17 +33,9 @@
 
 <link rel="icon" type="image/png" href="assets/img/favicon.png">
 
-<title>Asahi - Food & Restaurant HTML Template</title>
+<title>PRIVACY POLICY</title>
 </head>
 <body>
-
-<div class="preloader">
-<div class="spinner">
-<div class="double-bounce1"></div>
-<div class="double-bounce2"></div>
-</div>
-</div>
-
 
 <section class="login-area">
 <div class="container-fluid">
