--- a/shop.html
+++ b/shop.html
@@ -573,7 +573,7 @@ Privacy Policy
 <h3>ADDRESS</h3>
 <ul>
 <li class="address-s">
-44 Canal Center Plaza #200, <br> Alexandria, VA 22314, USA
+Florida, <br> USA
 </li>
 <li><a href="tel:1900–123-456-78">Hotline: 1900 – 123 456 78</a></li>
 <li><a href="../../cdn-cgi/l/email-protection#274654464f4e67404a464e4b0944484a">Email: <span class="__cf_email__" data-cfemail="731200121b1a33141e121a1f5d101c1e">[email&#160;protected]</span></a></li>
